--- a/campusanon/requirements.txt
+++ b/campusanon/requirements.txt
@@ -1,3 +1,10 @@
 Django~=5.2.10
 djangorestframework~=3.16.1
 djangorestframework-simplejwt~=5.5.1
+python-dotenv
+django-cors-headers
+dj-database-url
+psycopg2-binary
+gunicorn
+whitenoise
+redis
